[package]
name = "holinext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
date_nager_at = { path = "../date_nager_at" }
async-std = { version = "1.11.0", features = ["attributes"] }
tokio = {version ="1.19.2", features = ["full"] }
clap = { version = "3.2.5", features = ["derive"] }
serde_json = "^1.0"
serde = "^1.0"
env_logger = "0.9.0"
log = "0.4.17"
comfy-table = "6.0.0"
